--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.4'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
 
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	runtimeOnly 'com.h2database:h2'
